force-app/main/default/objects/Document_link_attributes__mdt/Document_link_attributes__mdt.object-meta.xml
<CustomObject>
    <label>Document link attributes</label>
    <pluralLabel>Document link attributes</pluralLabel>
</CustomObject>