force-app/main/default/objects/Document_link_attributes__mdt/fields/Document_id_field_name__c.field-meta.xml
<CustomField>
    <fullName>Document_id_field_name__c</fullName>
    <label>Document id field name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>