force-app/main/default/objects/Document_link_attributes__mdt/fields/Url_postfix__c.field-meta.xml
<CustomField>
    <fullName>Url_postfix__c</fullName>
    <label>Url postfix</label>
    <length>180</length>
    <type>Text</type>
</CustomField>