force-app/main/default/objects/Document_link_attributes__mdt/fields/Url_prefix__c.field-meta.xml
<CustomField>
    <fullName>Url_prefix__c</fullName>
    <label>Url prefix</label>
    <length>180</length>
    <type>Text</type>
</CustomField>